# BitonicSort

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pyproject.toml
.github/workflows/: ci.yml
compare/: CMakeLists.txt  benchmark.hpp  bitonic_sort_cmp.cpp  compare.out  compare.py  generate.py
include/BitonicSort/: common.hpp
include/BitonicSort/cl/: bitonic_sort.hpp  cl.hpp  command_queue.hpp  context.hpp  device.hpp  kernel.hpp  memory.hpp  platform.hpp  program.hpp
include/BitonicSort/cl/kernels/: bitonic_sort.cl
src/: CMakeLists.txt  bitonic_sort.cl  bitonic_sort.cpp
tests/end_to_end/: CMakeLists.txt  generate.py  run_tests.py
tests/end_to_end/answers/: answer_002.ans  answer_003.ans  answer_004.ans  answer_005.ans  answer_006.ans  answer_007.ans  answer_009.ans  answer_010.ans
tests/end_to_end/answers_core/: answer_001.in  answer_002.in  answer_004.in  answer_005.in  answer_006.in  answer_007.in  answer_008.in  answer_009.in  answer_010.in
tests/end_to_end/tests_in/: test_001.in  test_002.in  test_003.in  test_004.in  test_005.in  test_006.in  test_007.in  test_008.in  test_009.in  test_010.in
tests/unit/: CMakeLists.txt  bitonic_sort_unit_test.cpp
